# open62541-subscription

./: CMakeLists.txt  client.c  server.c  zmq_emitter.c
open62541/: CMakeLists.txt  open62541.c  open62541.h
